--- a/Plantillas/plantilla1.html
+++ b/Plantillas/plantilla1.html
@@ -1,5 +1,7 @@
 <html>
     <body>
+
+        {%include "superior/plantilla2.html"%}
     <h2 style="color: red">
     Hola Alumnos estamos viendo nuestra primera plantilla
     </h2>
